# esp-ena

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini
.github/workflows/: codeql-analysis.yml
components/display/: CMakeLists.txt  display-gfx.c  display-gfx.h  display.c  display.h  dummy.c
components/display-custom-ssd1306/: CMakeLists.txt
components/display-m5-st7735s/: CMakeLists.txt  st7735s.h
components/display-m5-st7789/: CMakeLists.txt  st7789.h
components/display-ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
components/display-st7735s/: CMakeLists.txt  st7735s.c
components/display-st7789/: CMakeLists.txt  st7789.c
components/display-ttgo-st7735/: CMakeLists.txt  st7735.c  st7735.h
components/display/m5-axp192/: axp192.h
components/ds3231/: CMakeLists.txt  ds3231.c
components/ds3231/include/: ds3231.h
components/ena/: CMakeLists.txt  Kconfig  Kconfig.projbuild  beacons.c  bluetooth-scan.c  ena-beacons.c  ena-bluetooth-advertise.c  ena-bluetooth-scan.c  ena-crypto.c  ena-exposure.c  ena-storage.c  ena.c  storage.c
components/ena-binary-export/: CMakeLists.txt  ena-binary-export.c  ena-binary-export.h
components/ena-binary-export/test/: export_tel.sig
components/ena-cwa/: CMakeLists.txt  ena-cwa.c  ena-cwa.h
components/ena-cwa/certs/: telekom.pem
components/ena-cwa/include/: ena-cwa.h
components/ena-eke-proxy/: CMakeLists.txt  Kconfig.projbuild  ena-eke-proxy.c  ena-eke-proxy.h
components/ena-eke-proxy/certs/: cert.pem  cwa-proxy.champonthis.de.pem
components/ena-interface/: CMakeLists.txt  ena-interface-datetime.c  ena-interface-menu.c  ena-interface-status.c  ena-interface.c  interface-datetime.c
components/ena-interface/include/: ena-interface-datetime.h  ena-interface-menu.h  ena-interface-status.h  ena-interface.h
components/ena/include/: ena-beacons.h  ena-bluetooth-advertise.h  ena-bluetooth-scan.h  ena-crypto.h  ena-exposure.h  ena-storage.h  ena.h
components/ena/test/: export_g.sig
components/i2c-main/: CMakeLists.txt  Kconfig.projbuild  i2c-main.c  i2c-main.h
components/imu-m5-mpu6886/: CMakeLists.txt
components/imu-mpu6886/: mpu6886.c
components/imu-ttgo-lsm9ds1/: CMakeLists.txt  lsm9ds1.c  lsm9ds1.h
components/interface/: CMakeLists.txt  Kconfig.projbuild  dummy.c  interface-data.c  interface-datetime.c  interface-debug.c  interface-info.c  interface-input.c  interface-label.c  interface-main.c  interface-menu.c  interface-report.c  interface-settings.c  interface-status.c  interface-wifi.c  interface.c  interface.h
components/interface-custom-input/: CMakeLists.txt  custom-input.c  custom-input.h
components/interface-input-buttons/: CMakeLists.txt  button-input.c  button-input.h
components/interface-input-m5/: CMakeLists.txt  m5-input.c
components/interface-m5-input/: CMakeLists.txt  m5-input.h
components/interface-ttgo-input/: CMakeLists.txt  ttgo-input.c  ttgo-input.h
components/interface/custom-input/: custom-input.c  custom-input.h
components/interface/include/: interface-datetime.h  interface-menu.h  interface-status.h  interface.h
components/interface/m5-input/: m5-input.c  m5-input.h
components/interface/m5-mpu6886/: mpu6886.h
components/interface/ttgo-input/: ttgo-input.c  ttgo-input.h
components/interface/ttgo-lsm9ds1/: lsm9ds1.c
components/miniz/: CMakeLists.txt
components/nanopb/: CMakeLists.txt  TemporaryExposureKeyExport.pb.c  TemporaryExposureKeyExport.pb.h  TemporaryExposureKeyExport.proto
components/pmu-axp192/: CMakeLists.txt  axp192.c
components/rtc/: CMakeLists.txt  dummy.c  rtc.h
components/rtc-bm8563/: CMakeLists.txt  bm8563.c
components/rtc-ds3231/: CMakeLists.txt  ds3231.c  ds3231.h
components/rtc-m5-bm8563/: bm8563.h
components/ssd1306/: CMakeLists.txt  ssd1306-gfx.c  ssd1306-gfx.h  ssd1306.c  ssd1306.h
components/ssd1306/include/: ssd1306-ascii.h  ssd1306.h
components/wifi-controller/: CMakeLists.txt  espidf-v4.0.c  espidf-v4.1.c  wifi-controller.c  wifi-controller.h  zephyr.c
include/: mbedtls+HKDF.h
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  display-interface.c  display-interface.h  ena-bluetooth-advertise.c  ena-bluetooth-advertise.h  ena-bluetooth-scan.c  ena-bluetooth-scan.h  ena-crypto.c  ena-crypto.h  ena-datastructures.h  ena-detection.c  ena-detection.h  ena-interface-datetime.c  ena-interface-datetime.h  ena-interface-menu.c  ena-interface-menu.h  ena-interface.c  ena-interface.h  ena-storage.c  ena-storage.h  ena.c  ena.h  main.c  wifi.c  wifi.h
main/wifi/: espidf-v4.0.c  espidf-v4.1.c  zephyr.c
zephyr/: CMakeLists.txt
